Modified EnronScanStatistics, EnronIO and EnronEmailGraph to reduce coupling. Previously subgraphs were passed to EnronScanStatistics and properties calculated as part of the scan statistic process. Now properties are calculated for each time step by EnronEmailGraph and these are passed instead.